--- a/app/src/main/res/layout/fragment_review.xml
+++ b/app/src/main/res/layout/fragment_review.xml
@@ -10,8 +10,8 @@
         android:id="@+id/backspace_button"
         android:layout_width="34dp"
         android:layout_height="34dp"
-        android:layout_marginStart="52dp"
-        android:layout_marginTop="52dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="20dp"
         android:background="@drawable/back"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -20,7 +20,7 @@
         android:id="@+id/delete_request"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="52dp"
+        android:layout_marginTop="20dp"
         android:gravity="center"
         android:text="삭제 요청"
         android:textColor="#000000"
@@ -46,7 +46,7 @@
         android:id="@+id/requester"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="124dp"
+        android:layout_marginTop="20dp"
         android:gravity="center"
         android:text="요청자 :"
         android:textColor="#000000"
@@ -55,7 +55,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.063"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="@+id/line" />
 
     <TextView
         android:id="@+id/delete_cafe_name"
@@ -106,14 +106,15 @@
         android:id="@+id/requester_input"
         android:layout_width="280dp"
         android:layout_height="27dp"
-        android:layout_marginTop="124dp"
+        android:layout_marginTop="20dp"
         android:background="@drawable/edge_edittext"
         android:ems="10"
         android:inputType="textPersonName"
         android:paddingLeft="10dp"
+        android:paddingRight="10dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/requester"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/line" />
 
     <EditText
         android:id="@+id/delete_cafe_name_input"
@@ -123,6 +124,8 @@
         android:background="@drawable/edge_edittext"
         android:ems="10"
         android:inputType="textPersonName"
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/delete_cafe_name"
         app:layout_constraintTop_toBottomOf="@+id/requester_input" />
@@ -135,6 +138,8 @@
         android:background="@drawable/edge_edittext"
         android:ems="10"
         android:inputType="textPersonName"
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/delete_cafe_address" />
@@ -142,11 +147,18 @@
     <EditText
         android:id="@+id/delete_cafe_reason_input"
         android:layout_width="370dp"
-        android:layout_height="300dp"
+        android:layout_height="0dp"
         android:layout_marginTop="10dp"
+        android:layout_marginBottom="20dp"
         android:background="@drawable/edge_edittext"
         android:ems="10"
-        android:inputType="textPersonName"
+        android:gravity="top"
+        android:inputType="textMultiLine"
+        android:paddingLeft="10dp"
+        android:paddingTop="10dp"
+        android:paddingRight="10dp"
+        android:paddingBottom="10dp"
+        app:layout_constraintBottom_toTopOf="@+id/request_button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.487"
         app:layout_constraintStart_toStartOf="parent"
@@ -156,6 +168,7 @@
         android:id="@+id/request_button"
         android:layout_width="108dp"
         android:layout_height="45dp"
+        android:layout_marginBottom="20dp"
         android:background="@drawable/edge_button"
         android:text="요청하기"
         android:textColor="#FFFFFF"
@@ -163,8 +176,7 @@
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/nav_view"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/delete_cafe_reason_input" />
+        app:layout_constraintStart_toStartOf="parent" />
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/nav_view"
