--- a/app/src/main/res/layout/fragment_delete.xml
+++ b/app/src/main/res/layout/fragment_delete.xml
@@ -169,7 +169,7 @@
         android:layout_width="108dp"
         android:layout_height="45dp"
         android:layout_marginBottom="20dp"
-        android:background="@drawable/edge_button"
+        android:background="@drawable/brown_button"
         android:text="요청하기"
         android:textColor="#FFFFFF"
         android:textSize="24sp"
