--- a/app/src/main/res/layout/fragment_review.xml
+++ b/app/src/main/res/layout/fragment_review.xml
@@ -63,7 +63,7 @@
         android:layout_height="40dp"
         android:layout_marginTop="10dp"
         android:layout_marginEnd="8dp"
-        android:background="@drawable/location_button"
+        android:background="@drawable/yellow_button"
         android:padding="10dp"
         android:text="위치인증"
         android:textColor="#FFFFFF"
@@ -367,7 +367,7 @@
         android:layout_height="35dp"
         android:layout_marginTop="24dp"
         android:layout_marginEnd="8dp"
-        android:background="@drawable/edge_button"
+        android:background="@drawable/brown_button"
         android:text="추가"
         android:textColor="#FFFFFF"
         android:textSize="20sp"
@@ -391,7 +391,7 @@
         android:layout_height="45dp"
         android:layout_marginStart="68dp"
         android:layout_marginTop="25dp"
-        android:background="@drawable/edge_button"
+        android:background="@drawable/brown_button"
         android:text="코멘터리 >"
         android:textColor="#FFFFFF"
         android:textSize="24sp"
@@ -405,7 +405,7 @@
         android:layout_height="45dp"
         android:layout_marginTop="25dp"
         android:layout_marginRight="68dp"
-        android:background="@drawable/edge_button"
+        android:background="@drawable/brown_button"
         android:text="작성완료"
         android:textColor="#FFFFFF"
         android:textSize="24sp"
