--- a/app/src/main/res/drawable/edge_bottom_back.xml
+++ b/app/src/main/res/drawable/edge_bottom_back.xml
@@ -3,6 +3,6 @@
     android:shape="rectangle">
     <solid android:color="#F4E9DD"/>
     <corners
-        android:topLeftRadius="10dp"
-        android:topRightRadius="10dp"/>
+        android:bottomRightRadius="10dp"
+        android:bottomLeftRadius="10dp"/>
 </shape>
