태그 추가 대부분 완성

--- a/app/src/main/res/layout/fragment_delete.xml
+++ b/app/src/main/res/layout/fragment_delete.xml
@@ -107,7 +107,7 @@
         android:layout_width="280dp"
         android:layout_height="27dp"
         android:layout_marginTop="20dp"
-        android:background="@drawable/edge_edittext"
+        android:background="@drawable/edge_top_back"
         android:ems="10"
         android:inputType="textPersonName"
         android:paddingLeft="10dp"
@@ -121,7 +121,7 @@
         android:layout_width="220dp"
         android:layout_height="27dp"
         android:layout_marginTop="10dp"
-        android:background="@drawable/edge_edittext"
+        android:background="@drawable/edge_top_back"
         android:ems="10"
         android:inputType="textPersonName"
         android:paddingLeft="10dp"
@@ -135,7 +135,7 @@
         android:layout_width="370dp"
         android:layout_height="27dp"
         android:layout_marginTop="10dp"
-        android:background="@drawable/edge_edittext"
+        android:background="@drawable/edge_top_back"
         android:ems="10"
         android:inputType="textPersonName"
         android:paddingLeft="10dp"
@@ -150,7 +150,7 @@
         android:layout_height="0dp"
         android:layout_marginTop="10dp"
         android:layout_marginBottom="20dp"
-        android:background="@drawable/edge_edittext"
+        android:background="@drawable/edge_top_back"
         android:ems="10"
         android:gravity="top"
         android:inputType="textMultiLine"
