--- a/app/src/main/res/layout/fragment_search_list.xml
+++ b/app/src/main/res/layout/fragment_search_list.xml
@@ -24,7 +24,7 @@
         android:layout_height="40dp"
         android:layout_marginTop="3dp"
         android:layout_marginEnd="16dp"
-        android:background="@drawable/edge_edittext"
+        android:background="@drawable/edge_top_back"
         android:ems="10"
         android:hint="이름, 주소 검색"
         android:inputType="textPersonName"
