태그 추가 대부분 완성 v2

--- a/app/src/main/res/drawable/edge_top_back.xml
+++ b/app/src/main/res/drawable/edge_top_back.xml
@@ -3,6 +3,5 @@
     android:shape="rectangle">
     <solid android:color="#F4E9DD"/>
     <corners
-        android:topLeftRadius="10dp"
-        android:topRightRadius="10dp"/>
+        android:radius="10dp"/>
 </shape>
