--- a/app/src/main/res/layout/fragment_review_comment.xml
+++ b/app/src/main/res/layout/fragment_review_comment.xml
@@ -10,23 +10,15 @@
         android:layout_height="0dp"
         app:layout_constraintBottom_toTopOf="@+id/nav_view"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0">
 
         <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/inside_layout"
             android:layout_width="match_parent"
             android:layout_height="10000dp">
-
-            <ImageView
-                android:id="@+id/imageView4"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
-                android:layout_marginEnd="290dp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/tag_textView2"
-                app:srcCompat="@drawable/add_image" />
 
             <TextView
                 android:id="@+id/caution_textView3"
@@ -108,12 +100,12 @@
                 android:id="@+id/line14"
                 android:layout_width="0dp"
                 android:layout_height="2dp"
-                android:layout_marginTop="20dp"
+                android:layout_marginTop="180dp"
                 android:background="#3B2314"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/imageView4" />
+                app:layout_constraintTop_toBottomOf="@+id/line10" />
 
             <TextView
                 android:id="@+id/caution_textView2"
@@ -158,16 +150,28 @@
                 android:id="@+id/finish_button2"
                 android:layout_width="108dp"
                 android:layout_height="45dp"
-                android:layout_marginTop="100dp"
+                android:layout_marginTop="20dp"
+                android:layout_marginBottom="20dp"
                 android:background="@drawable/brown_button"
                 android:text="작성완료"
                 android:textColor="#FFFFFF"
                 android:textSize="24sp"
                 android:textStyle="bold"
+                app:layout_constraintBottom_toBottomOf="@id/inside_layout"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.498"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/line14" />
+
+            <Button
+                android:id="@+id/button7"
+                android:layout_width="88dp"
+                android:layout_height="88dp"
+                android:layout_marginStart="30dp"
+                android:background="@drawable/add_image"
+                app:layout_constraintBottom_toTopOf="@+id/line14"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/tag_textView2" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
