--- a/app/src/main/res/layout/fragment_cafe_modify.xml
+++ b/app/src/main/res/layout/fragment_cafe_modify.xml
@@ -22,7 +22,7 @@
             android:layout_height="match_parent" >
 
             <TextView
-                android:id="@+id/cafe_modify_textView"
+                android:id="@+id/moreReview"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
@@ -52,7 +52,7 @@
                 android:background="#3B2314"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/cafe_modify_textView" />
+                app:layout_constraintTop_toBottomOf="@+id/moreReview" />
 
             <TextView
                 android:id="@+id/image_registration"
